@startuml

title __IMPL's Class Diagram__\n

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.services.impl {
    class pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.AirplaneServiceImpl {
        + createAirplane()
        + getAirplane()
        + getAllAirplanes()
        + getAllAirplanesFlights()
        + removeAirplane()
        + setAirPlaneDB()
        + updateAirplane()
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.services.impl {
    class pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.DestinationServiceImpl {
        + createDestination()
        + getAllDestinations()
        + getAllIncomingFlights()
        + getAllOutcomingFlights()
        + getDestination()
        + removeDestination()
        + setDestinationDB()
        + updateDestination()
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.services.impl {
    class pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.FlightServiceImpl {
        + createFlight()
        + getAllFlights()
        + getFlight()
        + removeFlight()
        + setAirPlaneDB()
        + setDesttinationDB()
        + setFlightDB()
        + setStewardDB()
        + updateFlight()
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.services.impl {
    class pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.StewardServiceImpl {
        + createSteward()
        + getAllStewards()
        + getAllStewardsFlights()
        + getSteward()
        + removeSteward()
        + setFlightDb()
        + setStewardDB()
        + updateSteward()
    }
  }
  

  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.AirplaneServiceImpl .up.|> pl.edu.uj.ii.ionb.airportmanager.services.AirplaneService
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.AirplaneServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.AirPlaneDB : AirPlaneDB
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.DestinationServiceImpl .up.|> pl.edu.uj.ii.ionb.airportmanager.services.DestinationService
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.DestinationServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.DestinationDB : destinationDB
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.FlightServiceImpl .up.|> pl.edu.uj.ii.ionb.airportmanager.services.FlightService
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.FlightServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.AirPlaneDB : AirPlaneDB
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.FlightServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.DestinationDB : destinationDB
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.FlightServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.FlightDB : flightDB
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.FlightServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.StewardDB : stewardDB
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.StewardServiceImpl .up.|> pl.edu.uj.ii.ionb.airportmanager.services.StewardService
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.StewardServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.FlightDB : flightDB
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.StewardServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.StewardDB : stewardDB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
